--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -96,10 +96,11 @@ h6,
 .h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
+  margin-left: auto;
   font-family: "Circular Std", "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 500;
   line-height: 1.2;
-  color: #272D4E;
+  color: #000000;
 }
 
 h1,
@@ -3990,17 +3991,17 @@ fieldset:disabled .btn {
 
 .btn-info:hover {
   color: #fff;
-  background-color: #6647d2;
-  border-color: #6043c6;
+  background-color: #FF5A15;
+  border-color: #FF5A15;
 }
 
 .btn-check:focus+.btn-info,
 .btn-info:focus {
   color: #fff;
-  background-color: #6647d2;
-  border-color: #6043c6;
-  -webkit-box-shadow: 0 0 0 0 rgba(140, 110, 248, 0.5);
-  box-shadow: 0 0 0 0 rgba(140, 110, 248, 0.5);
+  background-color: #FF5A15;
+  border-color: #FF5A15;
+  -webkit-box-shadow: 0 0 0 0 #FF5A15;
+  box-shadow: 0 0 0 0 #FF5A15;
 }
 
 .btn-check:checked+.btn-info,
@@ -4009,8 +4010,8 @@ fieldset:disabled .btn {
 .btn-info.active,
 .show>.btn-info.dropdown-toggle {
   color: #fff;
-  background-color: #6043c6;
-  border-color: #5a3fb9;
+  background-color: #FF5A15;
+  border-color: #FF5A15;
 }
 
 .btn-check:checked+.btn-info:focus,
@@ -4018,8 +4019,8 @@ fieldset:disabled .btn {
 .btn-info:active:focus,
 .btn-info.active:focus,
 .show>.btn-info.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0 rgba(140, 110, 248, 0.5);
-  box-shadow: 0 0 0 0 rgba(140, 110, 248, 0.5);
+  -webkit-box-shadow: 0 0 0 0 #FF5A15;
+  box-shadow: 0 0 0 0 #FF5A15;
 }
 
 .btn-info:disabled,
@@ -4230,8 +4231,8 @@ fieldset:disabled .btn {
 
 .btn-check:focus+.btn-outline-primary,
 .btn-outline-primary:focus {
-  -webkit-box-shadow: 0 0 0 0 rgba(95, 55, 239, 0.5);
-  box-shadow: 0 0 0 0 rgba(95, 55, 239, 0.5);
+  -webkit-box-shadow: 0 0 0 0 #FF5A15;
+  box-shadow: 0 0 0 0 #FF5A15;
 }
 
 .btn-check:checked+.btn-outline-primary,
@@ -4249,8 +4250,8 @@ fieldset:disabled .btn {
 .btn-outline-primary:active:focus,
 .btn-outline-primary.active:focus,
 .btn-outline-primary.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0 rgba(95, 55, 239, 0.5);
-  box-shadow: 0 0 0 0 rgba(95, 55, 239, 0.5);
+  -webkit-box-shadow: 0 0 0 0 #FF5A15;
+  box-shadow: 0 0 0 0 #FF5A15;
 }
 
 .btn-outline-primary:disabled,
@@ -4577,7 +4578,8 @@ fieldset:disabled .btn {
 .btn-group-lg>.btn {
   padding: 0.8rem 2rem;
   font-size: 1rem;
-  border-radius: 0.625rem;
+  background-color: #111;
+  border-bottom: #111;
 }
 
 .btn-sm,
