--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -4582,6 +4582,20 @@ fieldset:disabled .btn {
   border-bottom: #111;
 }
 
+.btn-cv {
+  padding: 0.8rem 2rem;
+  font-size: 1rem;
+  background-color: #fff;
+  border-bottom: #fff;
+  color: #000;
+}
+
+.btn-cv:hover {
+  color: #fff;
+  background-color: #FF5A15;
+  border-color: #FF5A15;
+}
+
 .btn-sm,
 .btn-group-sm>.btn {
   padding: 0.25rem 0.5rem;
